--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,8 @@
     "angular-websocket": "~1.0.8",
     "underscore": "~1.8.2",
     "angular-google-chart": "~0.0.11"
+  },
+  "resolutions": {
+    "angular": "1.3.x"
   }
 }
