--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "version": "0.0.1",
   "private": true,
-  "name": "Streetlife_Panl-UI",
-  "description": "Implamantation of Streetlife FrontEnd",
+  "name": "Streetlife-MMECP-UI",
+  "description": "Implamantation of Streetlife Mobility and Emmission Control Panel UI with AngularJS",
   "license": "MIT",
   "devDependencies": {
     "http-server": "^0.6.1",
     "bower": "^1.3.1"
   },
   "scripts": {
-    "postinstall": "bower install",
+    "postinstall": "./node_modules/.bin/bower install",
     "prestart": "npm install",
     "start": "http-server -a 0.0.0.0 -p 8000"
 	}
