--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-sanitize": "~1.3.13",
     "angular-websocket": "~1.0.8",
     "underscore": "~1.8.2",
-    "angular-google-chart": "~0.0.11"
+    "angular-google-chart": "~0.0.11",
+    "z-schema": "~3.5.2"
   },
   "resolutions": {
     "angular": "1.3.x"
