--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "name": "Streetlife-MMECP-UI",
   "description": "Implamantation of Streetlife Mobility and Emmission Control Panel UI with AngularJS",
   "license": "MIT",
-  "preferGlobal": true,
-  "devDependencies": {
-    "http-server": "^0.6.1"
-  },
   "scripts": {
     "preinstall": "npm i -g grunt-cli",
     "postinstall": "./node_modules/.bin/bower install",
     "prestart": "npm install",
     "start": "http-server -a 0.0.0.0 -p 8000"
   },
+  "devDependencies": {
+    "http-server": "^0.6.1"
+  },
   "dependencies": {
     "bower": "^1.3.1",
     "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13"
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-jshint": "^0.11.0"
   }
 }
