--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "version": "0.0.1",
-  "private": true,
   "name": "Streetlife-MMECP-UI",
   "description": "Implamantation of Streetlife Mobility and Emmission Control Panel UI with AngularJS",
+  "version": "0.0.1",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "preinstall": "npm i -g grunt-cli",
     "postinstall": "./node_modules/.bin/bower install",
@@ -16,8 +16,14 @@
   "dependencies": {
     "bower": "^1.3.1",
     "grunt": "^0.4.5",
+    "grunt-bower-concat": "^0.4.0",
     "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-injector": "^0.6.0"
   }
 }
