--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,8 @@
     "foundation": "~5.5.1",
     "ui-router": "~0.2.13",
     "foundation-icons": "*"
-  }
+  },
+  "resolutions": {
+  "angular": "~1.3.14"
+}
 }
