--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "tests"
   ],
   "dependencies": {
+    "jquery": "1.10.2",
     "angular-animate": "~1.3.14",
     "angular-foundation": "~0.5.1",
     "angular-route": "~1.3.14",
