--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Streetlife-MMECP-UI",
-  "description": "Implamantation of Streetlife Mobility and Emmission Control Panel UI with AngularJS",
+  "description": "Implementation of STREETLIFE Mobility and Emission Control Panel UI with AngularJS",
   "version": "0.0.1",
   "license": "MIT",
   "private": true,
