--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
   ],
   "dependencies": {
     "jquery": "1.10.2",
+    "angular-websocket": "~1.0.8",
     "angular-animate": "~1.3.14",
     "angular-foundation": "~0.5.1",
     "angular-route": "~1.3.14",
