--- a/bower.json
+++ b/bower.json
@@ -12,14 +12,14 @@
   ],
   "dependencies": {
     "jquery": ">= 2.1.0",
-    "angular-websocket": "~1.0.8",
     "angular-animate": "~1.3.14",
     "angular-foundation": "~0.5.1",
     "angular-route": "~1.3.14",
     "angular": "~1.3.14",
     "foundation": "~5.5.1",
     "ui-router": "~0.2.13",
-    "foundation-icon-fonts": "*"
+    "foundation-icon-fonts": "*",
+    "ng-websocket": "~0.2.1"
   },
   "resolutions": {
     "angular": "~1.3.14"
