--- a/bower.json
+++ b/bower.json
@@ -18,9 +18,12 @@
     "angular": "~1.3.14",
     "foundation": "~5.5.1",
     "ui-router": "~0.2.13",
-    "foundation-icon-fonts": "*"
+    "foundation-icon-fonts": "*",
+    "d3": "~3.5.5",
+    "angularjs-nvd3-directives": "~0.0.7"
   },
   "resolutions": {
-    "angular": "~1.3.14"
+    "angular": "~1.3.14",
+    "d3": "~3.4.1"
   }
 }
