--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "ui-router": "~0.2.13",
     "foundation-icon-fonts": "*",
     "d3": "~3.5.5",
-    "angularjs-nvd3-directives": "~0.0.7"
+    "angularjs-nvd3-directives": "~0.0.7",
+    "proj4": "~2.3.7"
   },
   "resolutions": {
     "angular": "~1.3.14",
