--- a/bower.json
+++ b/bower.json
@@ -19,9 +19,11 @@
     "foundation": "~5.5.1",
     "ui-router": "~0.2.13",
     "foundation-icon-fonts": "*",
-    "d3": "~3.5.5",
+    "d3": "~3.5.6",
     "angularjs-nvd3-directives": "~0.0.7",
-    "proj4": "~2.3.7"
+    "proj4": "~2.3.7",
+    "nvd3": "~1.8.1",
+    "angular-nvd3": "~0.1.1"
   },
   "resolutions": {
     "angular": "~1.3.14",
