--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "proj4": "~2.3.7",
     "nvd3": "~1.8.1",
     "angular-nvd3": "~0.1.1",
-    "OpenLayers": "~3.10.1"
+    "OpenLayers": "~3.10.1",
+    "angular-loading-bar": "~0.8.0"
   },
   "resolutions": {
     "angular": "~1.3.14",
