--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-injector": "^0.6.0",
-    "grunt-remove-logging": "~0.2.0"
+    "grunt-remove-logging": "~0.2.0",
+    "grunt-bower-task": "~0.4.0"
   }
 }
